# video_parser

./: .gitignore  CMakeLists.txt  README.md  SampleOpencvWrapper.py  SampleVideoParser.py  benchmark_data.txt  checkout_third_party.txt  requirements.dev.txt  scratch.txt
.devcontainer/: Dockerfile  devcontainer.json
PyOpencvWrapper/: CMakeLists.txt
PyOpencvWrapper/Sort_tracker/inc/: Hungarian.h  KalmanTracker.h  Sort_tracker.h
PyOpencvWrapper/Sort_tracker/src/: Hungarian.cpp  KalmanTracker.cpp  Sort_tracker.cpp
PyOpencvWrapper/inc/: AVFReader.h  CodecManager.h  Decoder.h  IVtplStreamFrameSrc.h  PyOpencvWrapper.h  UltraFace.h  VCodecMediaFrameType.h  VImageCodec2_c_api.h  VReturnStatus.h  VtplVideoFrame.h  VtplVideoStream.h  VtplVmsStreamGrabberFrameSrc.h  Vtype.h  Vtype_MIDT.h  crtdbgHelper.h  utils.hpp
PyOpencvWrapper/src/: AVFReader.cpp  IVtplStreamFrameSrc.cpp  PyOpencvWrapper.cpp  UltraFace.cpp  UltraFaceMain.cpp  VtplVideoFrame.cpp  VtplVideoStream.cpp  VtplVmsStreamGrabberFrameSrc.cpp  VtplVmsStreamGrabberFrameSrcTester.cpp  VtplVmsStreamGrabberFrameSrcTester12.cpp  benchmark_opencv.cpp  benchmark_vimagecodec.cpp  codecManager.cpp  main.cpp  utils.cpp
PyVideoParser/: CMakeLists.txt
PyVideoParser/Task/: CMakeLists.txt
PyVideoParser/Task/Core/: CMakeLists.txt
PyVideoParser/Task/Core/inc/: core.hpp
PyVideoParser/Task/Core/src/: Task.cpp  Token.cpp
PyVideoParser/Task/inc/: CodecSupport.hpp  FFmpegDemuxer.hpp  MemoryInterfaces.hpp  SimpleBinStream.hpp  VideoParser.hpp
PyVideoParser/Task/src/: FFmpegDemuxer.cpp  MemoryInterfaces.cpp  VideoParser.cpp
PyVideoParser/inc/: PyVideoParser.hpp
PyVideoParser/src/: PyVideoParser.cpp
utils/: BUILD.bzl  CMakeLists.txt
utils/inc/: WFMPMC.h  threadsafe_queue.h  zero_copy_queue.h
utils/src/: filesystem.cpp  logging.cpp
